--- a/samples/SimpleExeLibDependency/reference/projects/LibStuffProject_ProjectName.vcxproj
+++ b/samples/SimpleExeLibDependency/reference/projects/LibStuffProject_ProjectName.vcxproj
@@ -88,6 +88,7 @@
       <ProgramDatabaseFileName>obj\win64\debug\libstuffproject_projectname_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
