--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2017.win32.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2017.win32.v4_6_2.vcxproj
@@ -112,6 +112,7 @@
       <ProgramDatabaseFileName>temp\vs2017\win32\noblob_msbuild_vs2017_v4_6_2_debug_dll_win32\clrcppproj_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -198,6 +199,7 @@
       <ProgramDatabaseFileName>temp\vs2017\win32\noblob_msbuild_vs2017_v4_6_2_release_dll_win32\clrcppproj_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
