--- a/samples/ConfigureOrder/reference/projects/foobarproject.vcxproj
+++ b/samples/ConfigureOrder/reference/projects/foobarproject.vcxproj
@@ -88,6 +88,7 @@
       <ProgramDatabaseFileName>obj\win32\release\foobarproject_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
