--- a/samples/HelloWorld/reference/projects/helloworld_vs2017_win32.vcxproj
+++ b/samples/HelloWorld/reference/projects/helloworld_vs2017_win32.vcxproj
@@ -89,6 +89,7 @@
       <ProgramDatabaseFileName>obj\win32\debug\helloworld_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
