--- a/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
+++ b/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
@@ -88,6 +88,7 @@
       <ProgramDatabaseFileName>obj\win64\debug\simpleexeprojectname_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
