[CI] Change appveyor to use msbuild /restore instead of nuget restore which wasn't properly grabbing the visual studio nuget package.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ configuration:
 
 before_build:
 - cmd: bootstrap-sharpmake.bat
-- cmd: nuget restore Sharpmake.sln
+- cmd: msbuild /restore Sharpmake.sln
 
 build:
   project: Sharpmake.sln
