--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/spanmultiplesrcdirsfbnoblobexclude_vs2017_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/spanmultiplesrcdirsfbnoblobexclude_vs2017_win64.vcxproj
@@ -23,6 +23,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <RootNamespace>SpanMultipleSrcDirsFBNoBlobExclude</RootNamespace>
     <ProjectName>SpanMultipleSrcDirsFBNoBlobExclude</ProjectName>
+  </PropertyGroup>
+  <PropertyGroup Label="Globals">
     <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -177,7 +179,6 @@ del "output\release_fastbuild_noblob_vs2017\spanmultiplesrcdirsfbnoblobexclude.p
       <ProgramDatabaseFileName>build\debug_msbuild_vs2017\spanmultiplesrcdirsfbnoblobexclude\spanmultiplesrcdirsfbnoblobexclude_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -266,7 +267,6 @@ del "output\release_fastbuild_noblob_vs2017\spanmultiplesrcdirsfbnoblobexclude.p
       <ProgramDatabaseFileName>build\release_msbuild_vs2017\spanmultiplesrcdirsfbnoblobexclude\spanmultiplesrcdirsfbnoblobexclude_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
