--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/useprecompexe_vs2017_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/useprecompexe_vs2017_win64.vcxproj
@@ -31,6 +31,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <RootNamespace>UsePrecompExe</RootNamespace>
     <ProjectName>UsePrecompExe</ProjectName>
+  </PropertyGroup>
+  <PropertyGroup Label="Globals">
     <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -240,7 +242,6 @@ del "output\release_fastbuild_vs2017\useprecompexe.pdb" >NUL 2>NUL</NMakeCleanCo
       <ProgramDatabaseFileName>build\debug_msbuild_vs2017\useprecompexe\useprecompexe_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -330,7 +331,6 @@ del "output\release_fastbuild_vs2017\useprecompexe.pdb" >NUL 2>NUL</NMakeCleanCo
       <ProgramDatabaseFileName>build\release_msbuild_vs2017\useprecompexe\useprecompexe_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
