--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2017.win32.v4_5.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2017.win32.v4_5.vcxproj
@@ -17,6 +17,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <RootNamespace>CLRCPPProj</RootNamespace>
     <ProjectName>CLRCPPProj</ProjectName>
+  </PropertyGroup>
+  <PropertyGroup Label="Globals">
     <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -112,7 +114,6 @@
       <ProgramDatabaseFileName>temp\vs2017\win32\noblob_msbuild_vs2017_v4_5_debug_dll_win32\clrcppproj_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -199,7 +200,6 @@
       <ProgramDatabaseFileName>temp\vs2017\win32\noblob_msbuild_vs2017_v4_5_release_dll_win32\clrcppproj_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
