--- a/samples/CPPCLI/reference/projects/theemptycppproject.vs2015.win32.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/theemptycppproject.vs2015.win32.v4_6_2.vcxproj
@@ -16,6 +16,8 @@
     <RootNamespace>theEmptyCPPProject</RootNamespace>
     <ProjectName>theEmptyCPPProject</ProjectName>
   </PropertyGroup>
+  <PropertyGroup Label="Globals">
+  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
