--- a/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
+++ b/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
@@ -11,6 +11,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <RootNamespace>SimpleExeProjectName</RootNamespace>
     <ProjectName>SimpleExeProjectName</ProjectName>
+  </PropertyGroup>
+  <PropertyGroup Label="Globals">
     <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -88,7 +90,6 @@
       <ProgramDatabaseFileName>obj\win64\debug\simpleexeprojectname_compiler.pdb</ProgramDatabaseFileName>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ShowIncludes>false</ShowIncludes>
-      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
