--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/requireprebuildstep_vs2017_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/requireprebuildstep_vs2017_win64.vcxproj
@@ -275,8 +275,7 @@ del "output\release_fastbuild_vs2017\requireprebuildstep.pdb" >NUL 2>NUL</NMakeC
       <AdditionalDependencies>;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\debug_msbuild_vs2017\requireprebuildstep.map</MapFileName>
       <BaseAddress></BaseAddress>
@@ -363,8 +362,7 @@ del "output\release_fastbuild_vs2017\requireprebuildstep.pdb" >NUL 2>NUL</NMakeC
       <AdditionalDependencies>;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\release_msbuild_vs2017\requireprebuildstep.map</MapFileName>
       <BaseAddress></BaseAddress>
