--- a/samples/ConfigureOrder/reference/projects/childproject.vcxproj
+++ b/samples/ConfigureOrder/reference/projects/childproject.vcxproj
@@ -119,8 +119,7 @@
       <AdditionalDependencies>;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\release\childproject.map</MapFileName>
       <BaseAddress></BaseAddress>
