--- a/samples/HelloWorld/reference/projects/helloworld_vs2017_win32.vcxproj
+++ b/samples/HelloWorld/reference/projects/helloworld_vs2017_win32.vcxproj
@@ -120,8 +120,7 @@
       <AdditionalDependencies>;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\debug\helloworld.map</MapFileName>
       <BaseAddress></BaseAddress>
