--- a/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
+++ b/samples/SimpleExeLibDependency/reference/projects/SimpleExeProjectName_vs2017_win64.vcxproj
@@ -120,8 +120,7 @@
       <AdditionalDependencies>libstuffproject_projectname.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win64\debug\simpleexeprojectname.map</MapFileName>
       <BaseAddress></BaseAddress>
