--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2015.win32.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2015.win32.v4_6_2.vcxproj
@@ -142,8 +142,7 @@
       <AdditionalDependencies>theemptycppproject.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\debug\clrcppproj.map</MapFileName>
       <BaseAddress></BaseAddress>
@@ -227,8 +226,7 @@
       <AdditionalDependencies>theemptycppproject.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>
-      </IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries></IgnoreSpecificDefaultLibraries>
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\release\clrcppproj.map</MapFileName>
       <BaseAddress></BaseAddress>
