Add official nuget repo to nuget.config

--- a/nuget.config
+++ b/nuget.config
@@ -9,4 +9,8 @@
         <add key="automatic" value="True" />
     </packageRestore>
 
+    <packageSources>
+        <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
+    </packageSources>
+
 </configuration>
