[Vcxproj|AndroidProj] Android support improvements
- AndroidHome, NdkRoot, JavaHome, AntHome, can now be set as conf options, and/or as global settings. Note that if set in the conf, it will take precedence
- AndroidAPILevel now support range [16, 30]
- New utility methods in Options were added, to ease retrieving an option value in a range of configurations or dictionaries
- API CHANGE: IGenerationContext doesn't allow the Options and CommandLineOptions setters anymore
- Common code between Vcxproj and Androidproj generators has been moved to a new VsProjCommon class. Note that it's not an inheritance for now, to keep API breaking changes to a minimum
- Androidproj generator now uses a GenerationContext, inheriting from the Vcxproj one until we can rename that...
- The IVcxprojGenerationContext now keeps the list of options per configuration, so they can be queried by the platform modules
- The list of options per configuration is generated sooner, so the generators can use them when writing global projet properties. This is used for instance to merge configuration options and write them once instead of duplicated.
- Remove unused variable in the ProjectOptionsGenerator
- IPlatformVcxproj now exposes a new callback that's called after the default project props have been imported
- Add an option to control the verbosity of the msbuild logger when compiling android projects, by default set to low

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -102,6 +102,9 @@
     <Compile Include="VisualStudio\UserFile.cs" />
     <Compile Include="VisualStudio\Vcxproj.Template.cs" />
     <Compile Include="VisualStudio\Vcxproj.cs" />
+    <Compile Include="VisualStudio\VsProjCommon.Template.cs" />
+    <Compile Include="VisualStudio\VsProjCommon.cs" />
+    <Compile Include="VisualStudio\VsUtil.cs" />
     <Compile Include="XmlFileGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
