--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Android\AndroidPlatform.cs" />
     <Compile Include="Android\GlobalSettings.cs" />
     <Compile Include="Android\Util.cs" />
+    <Compile Include="Apple\BaseApplePlatform.cs" />
     <Compile Include="Apple\MacOsPlatform.cs" />
+    <Compile Include="Apple\iOsPlatform.cs" />
     <Compile Include="BaseMicrosoftPlatform.Vcxproj.Template.cs" />
     <Compile Include="BaseMicrosoftPlatform.cs" />
     <Compile Include="BasePlatform.Vcxproj.Template.cs" />
