Add Compile Sharpmake script for MacOS - adapt Bootstrapper by calling CompileSharpmake script - make Compile script as executable - adapt CI with new script for MacOS

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,7 +21,7 @@ before_build:
 
 build_script:
   - cmd: CompileSharpmake.bat Sharpmake.sln "%CONFIGURATION%" "%PLATFORM%"
-  - sh: msbuild -t:build -restore Sharpmake.sln /p:Configuration=\"$CONFIGURATION\" /p:Platform=\"$PLATFORM\" /nologo /v:m
+  - sh: ./CompileSharpmake.sh Sharpmake.sln "${CONFIGURATION}" "${PLATFORM}"
 
 test:
   assemblies:
