--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -87,6 +87,7 @@
     <Compile Include="FakeFileTree.cs" />
     <Compile Include="FastBuildSettings.cs" />
     <Compile Include="FileSystemStringComparer.cs" />
+    <Compile Include="GeneratedAssemblyConfig.cs" />
     <Compile Include="GenerationOutput.cs" />
     <Compile Include="GeneratorManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
