[IOS] Add FastBuild support for iOS

--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Android\Util.cs" />
     <Compile Include="Apple\BaseApplePlatform.cs" />
     <Compile Include="Apple\MacOsPlatform.cs" />
+    <Compile Include="Apple\iOsPlatform.Bff.Template.cs" />
     <Compile Include="Apple\iOsPlatform.cs" />
     <Compile Include="BaseMicrosoftPlatform.Vcxproj.Template.cs" />
     <Compile Include="BaseMicrosoftPlatform.cs" />
