--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Android\AndroidPlatform.cs" />
     <Compile Include="Android\GlobalSettings.cs" />
     <Compile Include="Android\Util.cs" />
+    <Compile Include="Apple\BaseApplePlatform.Bff.Template.cs" />
     <Compile Include="Apple\BaseApplePlatform.cs" />
     <Compile Include="Apple\MacOsPlatform.cs" />
     <Compile Include="Apple\iOsPlatform.Bff.Template.cs" />
