--- a/samples/NetCore/DotNetFrameworkHelloWorld/reference/projects/helloworldmultiframework/HelloWorldMultiFramework.vs2019.csproj
+++ b/samples/NetCore/DotNetFrameworkHelloWorld/reference/projects/helloworldmultiframework/HelloWorldMultiFramework.vs2019.csproj
@@ -10,6 +10,7 @@
     <TargetFrameworks>net461;net462</TargetFrameworks>
     <FileAlignment>512</FileAlignment>
     <EnableDefaultItems>false</EnableDefaultItems>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)|$(TargetFramework)'=='Debug|AnyCPU|net461'">
     <PlatformTarget>AnyCPU</PlatformTarget>
