[XCode] Add a GenerationContext (thanks to Guillaume Buchle) - Also add code to detect the PCH location

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Apple\XCWorkspace.Template.cs" />
     <Compile Include="Apple\XCWorkspace.cs" />
+    <Compile Include="Apple\XCode.Util.cs" />
     <Compile Include="Apple\XCodeProj.Template.cs" />
     <Compile Include="Apple\XCodeProj.cs" />
     <Compile Include="CompilerSettings.cs" />
