The path to the .bff file in the FastBuildAll .vcxproj is no longer an absolute path.

--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/fastbuildfunctionaltest_all.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/fastbuildfunctionaltest_all.vcxproj
@@ -89,7 +89,7 @@ $(ProjectDir)..\..\..\tools\FastBuild\FBuild.exe -clean FastBuildFunctionalTest_
     <NMakePreprocessorDefinitions>NDEBUG;WIN64</NMakePreprocessorDefinitions>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="e:\rd\sharpmakes\sharpmake.packageci\sharpmake\sharpmake.functionaltests\fastbuildfunctionaltest\projects\fastbuildfunctionaltest_all.bff" />
+    <None Include="fastbuildfunctionaltest_all.bff" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
